--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@mui/styled-engine-sc": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -15,7 +16,10 @@
     "react-google-maps": "^9.4.5",
     "react-place-autocomplete": "^0.1.0",
     "react-places-autocomplete": "^7.3.0",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-window": "^1.8.6",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
